# Liyulingyue-CreativeProjects

./: .gitignore  DAILY_COMPLETE_2026-02-18.md  README.md  WORK_SUMMARY.md  clean_pycache.sh
AIWallpaper/: .env.example  .gitignore  Cargo.toml  README.md  app.rc
AIWallpaper/bg/: index.html
AIWallpaper/src/: api.rs  main.rs  wallpaper_engine.rs
AIWallpaper/src/app/: ipc.rs  mod.rs  protocol.rs
AIWallpaper/src/platform/: macos.rs  mod.rs
AIWallpaper/src/platform/windows/: mod.rs  wallpaper_engine.rs
AIWallpaper/ui/: index.html
AIWallpaper/ui-pro/: index.html  package-lock.json  package.json
AIWallpaper/ui-pro/src/: App.tsx  store.ts
AIWallpaper/ui-pro/src/components/: Header.tsx  ImageEditorModal.tsx  MessageBox.tsx
AIWallpaper/ui-pro/src/pages/: CreatePage.tsx  GalleryPage.tsx  SettingsPage.tsx  TasksPage.tsx
AgentLearn/: README.md
DeepEvalTest/: .env.example  .gitignore  eval_data.py  eval_data_simple.py  requirements.txt  test_chatbot.py  (+1 more)
MoEAllocator/: .gitignore  QuickStart.md  README.md  distributed-quickstart.md  pyproject.toml  requirements.txt  run_test.sh
MoEAllocator/backend/: README.md  main.py  process_manager.py  proxy.py  run.py
MoEAllocator/backend/app/: main.py  process_manager.py  proxy.py
MoEAllocator/backend/app/routers/: inference.py  nodes.py
MoEAllocator/backend/routers/: __init__.py  inference.py  nodes.py
MoEAllocator/frontend/: index.html
MoEAllocator/frontend/src/: App.css  App.tsx  api.ts  types.ts
MoEAllocator/src/: compare_original_split.py  inference_chat.py  inference_mini.py  inference_mini_plus.py  inference_mini_plus2.py  inquisitor_cli.py  moe_grouped.py  surgeon_cli.py
MoEAllocator/src/inquisitor/: __init__.py  analyzer.py  architecture.py  inquisitor.py
MoEAllocator/src/nexus/: __init__.py  master.py  startup.py  worker.py
MoEAllocator/src/surgeon/: __init__.py  manifest.py  splitter.py  surgeon.py
MoEAllocator/tests/: test_grouped_moe.py  test_master_dtype.py
(+460 files in other folders)
