[package]
name = "ai-wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.16"            # 窗口管理
wry = "0.24"            # WebView2 渲染
tray-icon = "0.2"       # 系统托盘
tray-menu = "0.1"       # 托盘菜单
windows-sys = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation", 
    "Win32_Graphics_Gdi"
] }
tokio = { version = "1", features = ["full"] } # 异步运行时
reqwest = { version = "0.11", features = ["json"] } # API 请求
dotenvy = "0.15"        # .env 管理
config = "0.13"         # 配置持久化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
